# cowser

./: .gitignore  LICENSE  Makefile  README.md  cowser.cabal  default.nix  release.nix  shell.nix
app/: Main.hs
